--- a/Gestion inteligente academica/Gestion inteligente academica.csproj
+++ b/Gestion inteligente academica/Gestion inteligente academica.csproj
@@ -76,6 +76,12 @@
     <Compile Include="Form5.Designer.cs">
       <DependentUpon>Form5.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form6.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form6.Designer.cs">
+      <DependentUpon>Form6.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -136,6 +142,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\UCundimanarca.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\chulo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\riesgo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\riesgo1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\signo_admiracion.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Riesgo_bajo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
